--- a/FluentEditor/OuterNav/OuterNavPage.xaml
+++ b/FluentEditor/OuterNav/OuterNavPage.xaml
@@ -2,23 +2,39 @@
     Copyright (c) Microsoft Corporation. All rights reserved.
     Licensed under the MIT License.
 -->
-<Page
-    x:Class="FluentEditor.OuterNav.OuterNavPage"
-    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    Background="{ThemeResource AppBackgroundBrush}"
-    mc:Ignorable="d">
+<Page x:Class="FluentEditor.OuterNav.OuterNavPage"
+      xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+      xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+      xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+      xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+      Background="{ThemeResource AppBackgroundBrush}"
+      mc:Ignorable="d">
 
     <Grid>
-        <Frame
-            x:Name="NavigationFrame"
-            HorizontalAlignment="Stretch"
-            VerticalAlignment="Stretch">
-            <Frame.ContentTransitions>
-                <TransitionCollection />
-            </Frame.ContentTransitions>
-        </Frame>
+        <NavigationView PaneDisplayMode="Top"
+                        MenuItemsSource="{x:Bind ViewModel.NavItems}"
+                        ItemInvoked="OnItemInvoked"
+                        IsBackButtonVisible="Collapsed"
+                        IsSettingsVisible="False">
+            <NavigationView.MenuItemTemplate>
+                <DataTemplate>
+                    <StackPanel Orientation="Horizontal">
+                        <FontIcon Glyph="{Binding Glyph}"
+                                  HorizontalAlignment="Center"
+                                  Margin="4" />
+                        <TextBlock Text="{Binding Title}"
+                                   HorizontalAlignment="Center"
+                                   Margin="4"/>
+                    </StackPanel>
+                </DataTemplate>
+            </NavigationView.MenuItemTemplate>
+            <Frame x:Name="NavigationFrame"
+                   HorizontalAlignment="Stretch"
+                   VerticalAlignment="Stretch">
+                <Frame.ContentTransitions>
+                    <TransitionCollection />
+                </Frame.ContentTransitions>
+            </Frame>
+        </NavigationView>
     </Grid>
 </Page>
