--- a/FluentEditor/ControlPalette/ControlPaletteResources.xaml
+++ b/FluentEditor/ControlPalette/ControlPaletteResources.xaml
@@ -2,11 +2,10 @@
     Copyright (c) Microsoft Corporation. All rights reserved.
     Licensed under the MIT License.
 -->
-<ResourceDictionary
-    x:Class="FluentEditor.ControlPalette.ControlPaletteResources"
-    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:FluentEditor.ControlPalette">
+<ResourceDictionary x:Class="FluentEditor.ControlPalette.ControlPaletteResources"
+                    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+                    xmlns:local="using:FluentEditor.ControlPalette">
     <ResourceDictionary.ThemeDictionaries>
         <ResourceDictionary x:Key="Default">
             <ResourceDictionary.MergedDictionaries>
