--- a/FluentEditor/ControlPalette/ThemePaletteView/ThemeManager.xaml
+++ b/FluentEditor/ControlPalette/ThemePaletteView/ThemeManager.xaml
@@ -1,6 +1,6 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-                    xmlns:common="using:FluentEditor.ControlPalette.CustomView.Common">
+                    xmlns:common="using:FluentEditor.ControlPalette.ThemePaletteView.Common">
 
     <common:ThemeManager x:Key="ThemeManager">
         <common:ThemeManager.DarkTheme>
