--- a/FluentEditor/ControlPalette/ThemePaletteView/ThemePaletteView.xaml
+++ b/FluentEditor/ControlPalette/ThemePaletteView/ThemePaletteView.xaml
@@ -1,11 +1,11 @@
-﻿<Page x:Class="FluentEditor.ControlPalette.CustomView.CustomPaletteView"
+﻿<Page x:Class="FluentEditor.ControlPalette.ThemePaletteView.ThemePaletteView"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-      xmlns:local="using:FluentEditor.ControlPalette.CustomView"
+      xmlns:local="using:FluentEditor.ControlPalette.ThemePaletteView"
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
       xmlns:color="using:FluentEditorShared.ColorPalette"
-      xmlns:common="using:FluentEditor.ControlPalette.CustomView.Common"
+      xmlns:common="using:FluentEditor.ControlPalette.ThemePaletteView.Common"
       xmlns:utils="using:FluentEditorShared.Utils"
       mc:Ignorable="d"
       Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
@@ -13,7 +13,7 @@
     <Page.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
-                <ResourceDictionary Source="ms-appx:///ControlPalette/CustomView/ThemeDictionaries.xaml" />
+                <ResourceDictionary Source="ms-appx:///ControlPalette/ThemePaletteView/ThemeDictionaries.xaml" />
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
     </Page.Resources>
